// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField /> Default story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r0:"
      >
        Default input field
      </label>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r1:"
        aria-invalid="false"
        class="input"
        id=":r0:"
        type="text"
      />
    </div>
    <div
      class="field-note"
      id=":r1:"
    >
      This is a fieldnote.
    </div>
  </div>
</div>
`;

exports[`<InputField /> Disabled story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label input-field__label--disabled"
        for=":r6:"
      >
        Disabled input field
      </label>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r7:"
        aria-invalid="false"
        class="input"
        disabled=""
        id=":r6:"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--disabled"
      id=":r7:"
    >
      This InputField is disabled
    </div>
  </div>
</div>
`;

exports[`<InputField /> Error story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r4:"
      >
        Error input field
      </label>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r5:"
        aria-invalid="true"
        class="input error"
        id=":r4:"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--error"
      id=":r5:"
    >
      <svg
        class="icon field-note__icon"
        fill="currentColor"
        height="1rem"
        role="img"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          error
        </title>
        <path
          d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
        />
      </svg>
      This is a fieldnote with an error.
    </div>
  </div>
</div>
`;

exports[`<InputField /> InputWithin story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":rc:"
      >
        Input field with button inside
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-invalid="false"
        class="input"
        id=":rc:"
        type="text"
      />
      <div
        class="input-field__input-within"
      >
        <button
          class="button button--sm button--icon button--brand"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> NoFieldnote story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r2:"
      >
        Default input field
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-invalid="false"
        class="input"
        id=":r2:"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> NoVisibleLabel story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline input-field__overline--no-label"
    >
      <span
        class="text text--body-sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rb:"
        aria-invalid="false"
        aria-label="Input for no visible label"
        class="input"
        id=":ra:"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id=":rb:"
    >
      This input field has no visible label
    </div>
  </div>
</div>
`;

exports[`<InputField /> Required story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r8:"
      >
        Input field with fieldNote
      </label>
      <span
        class="text text--body-sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r9:"
        aria-invalid="false"
        class="input"
        id=":r8:"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id=":r9:"
    >
      This is a fieldnote for a required input field.
    </div>
  </div>
</div>
`;

exports[`<InputField /> TabularInput story renders snapshot 1`] = `
<div
  class="p-2"
>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row"
      >
        <th
          class="table-header-cell"
        >
          Label
        </th>
        <th
          class="table-header-cell"
        >
          Field
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell flex items-center"
        >
          <label
            class="label flex items-center"
            for="field-1"
            id="input-1"
          >
            Input One
             
          </label>
        </td>
        <td
          class="table-cell"
        >
          <div>
            <div
              class="input-field__body"
            >
              <input
                aria-invalid="false"
                aria-label="redundant"
                aria-labelledby="input-1"
                class="input"
                id="field-1"
                placeholder="click the label to highlight field"
                type="text"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<InputField /> WithAMaxLength story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":re:"
      >
        test label
      </label>
      <span
        class="text text--body-sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-invalid="false"
        class="input error"
        id=":re:"
        maxlength="15"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithARecommendedLength story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":rg:"
      >
        test label
      </label>
      <span
        class="text text--body-sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-invalid="false"
        class="input error"
        id=":rg:"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithBothMaxAndRecommendedLength story renders snapshot 1`] = `
<div
  class="p-2"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":ri:"
      >
        test label
      </label>
      <span
        class="text text--body-sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rj:"
        aria-invalid="false"
        class="input error"
        id=":ri:"
        maxlength="20"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note field-note--error"
        id=":rj:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        Longer Field Description
      </div>
      <div
        class="input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
    </div>
  </div>
</div>
`;
